--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,3 +47,57 @@ div.tabs > *.active{
 .flying-button-parent button{
     @apply border-primary bg-primary text-white rounded-full;
 }
+
+/* globals.css */
+@keyframes slideshow {
+    0% { opacity: 0; }
+    20% { opacity: 1; }
+    80% { opacity: 1; }
+    100% { opacity: 0; }
+  }
+  
+  .slideshow-container {
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+  }
+  
+  .slideshow-container img {
+    width: 100%;
+    height: auto;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: slideshow 6s infinite;
+  }
+  
+  .slideshow-container img:nth-child(1) {
+    animation-delay: 0s;
+  }
+  
+  .slideshow-container img:nth-child(2) {
+    animation-delay: 2s;
+  }
+  
+  .slideshow-container img:nth-child(3) {
+    animation-delay: 4s;
+  }
+  .slide-animation {
+    animation: slideAnimation 3s infinite; /* Adjust duration as needed */
+  }
+
+  @keyframes slideAnimation {
+    0% {
+      transform: translateX(10%);
+    }
+    25% {
+      transform: translateX(0%);
+    }
+    75% {
+      transform: translateX(0%);
+    }
+    100% {
+      transform: translateX(-10%);
+    }
+  }
